feat(parcours): Add insert parcours endpoint
